--- a/acm.html
+++ b/acm.html
@@ -250,9 +250,9 @@
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW1.pdf">Завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW1.pdf">Завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmhw1_m1/blob/master/acmhw1_m1.c">Зразок коду одним файлом*(відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw1_m1/blob/master/acmhw1_m1.c', 'acmhw1_m1.c'); return false;">Зразок коду одним файлом*(скачати)</a></b>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw1_m1/master/acmhw1_m1.c', 'acmhw1_m1.c'); return false;">Зразок коду одним файлом*(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmhw1_m2/blob/master/acmhw1_m2.c">зразок коду одним файлом* для іншого способу реалізації(відкрити на GitHub)</a>
-					      | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw1_m2/blob/master/acmhw1_m2.c', 'acmhw1_m2.c'); return false;">зразок коду одним файлом* для іншого способу реалізації(скачати)</a>			
+					      | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw1_m2/master/acmhw1_m2.c', 'acmhw1_m2.c'); return false;">зразок коду одним файлом* для іншого способу реалізації(скачати)</a>			
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW2.pdf">Завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW2.pdf">Завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c">Зразок коду одним файлом*(відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
                         </div>
                     </div>
                 </div>
@@ -272,8 +272,8 @@
                     <div id="hw3" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
                         <div class="accordion-body">	
                                            Матеріали: <b>Завдання буде додане після наступного заняття</b>
-						                            | <a href="https://github.com/KozakNazar/srcacmhw3/blob/master/acmhw3.c">Зразок коду одним файлом*(відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw3/blob/master/acmhw3.cpp', 'acmhw3.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
+						                            | <a href="https://github.com/KozakNazar/srcacmhw3/blob/master/acmhw3.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw3/master/acmhw3.cpp', 'acmhw3.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
                         </div>
                     </div>
                 </div>
