--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -98,10 +98,10 @@ style='mso-ansi-language:UK'><o:p></o:p></span></p>
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
 mso-ansi-language:UK'>1.1.9 Імовірнісні алгоритми <i>(</i></span><i><span
 lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:EN-US'>Probabilistic</span></i><i><span lang=EN-US
+mso-ansi-language:EN-US'>увипадковлені</span></i><i><span lang=EN-US
 style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
 UK'> </span></i><i><span lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:EN-US'>algorithms</span></i><i><span lang=UK
+mso-ansi-language:EN-US'>алгоритми</span></i><i><span lang=UK
 style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
 UK'>)</span></i><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
