--- a/123.html
+++ b/123.html
@@ -43,11 +43,11 @@
                     <div id="annotationAndRecommendedReading" class="accordion-collapse collapse" data-bs-parent="#general">
                         <div class="accordion-body">
 						 Матеріали:	<a href="https://kozaknazar.github.io/ACMVNSPDF.pdf" target="_blank">ВНС</a> 
-							      | <a href="https://docs.google.com/viewer?url=https://kozaknazar.github.io/ACMVNSPDF.pdf">ВНС by GV</a>	
+							      | <a href="https://docs.google.com/viewer?url=https://kozaknazar.github.io/ACMVNSPDF.pdf" target="_blank">ВНС by GV</a>	
                                   | <a href="https://kozaknazar.github.io/ACM2025_L0.pdf" target="_blank">Лекція 0</a> 
-							      | <a href="https://docs.google.com/viewer?url=https://kozaknazar.github.io/ACM2025_L0.pdf">Лекція 0 by GV</a>
+							      | <a href="https://docs.google.com/viewer?url=https://kozaknazar.github.io/ACM2025_L0.pdf" target="_blank">Лекція 0 by GV</a>
 				                  | <a href="https://kozaknazar.github.io/ACM2025_L1.pdf" target="_blank">Лекція 1</a> 
-							      | <a href="https://docs.google.com/viewer?url=https://kozaknazar.github.io/ACM2025_L1.pdf">Лекція 1 by GV</a>	
+							      | <a href="https://docs.google.com/viewer?url=https://kozaknazar.github.io/ACM2025_L1.pdf" target="_blank">Лекція 1 by GV</a>	
 								  
                         </div>
                     </div>
