--- a/123.html
+++ b/123.html
@@ -35,12 +35,12 @@
 	
 	<div class="container mt-4">	
 
-        <section id="general" class="mt-4">
-            <h2>Загальне</h2>
-            <div class="accordion" id="general">
+        <section id="consult" class="mt-4">
+            <h2>1</h2>
+            <div class="accordion" id="consult">
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#annotationAndRecommendedReading">Вступна та перша лекції</button></h2>
-                    <div id="annotationAndRecommendedReading" class="accordion-collapse collapse" data-bs-parent="#general">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#consult1">Вступна та перша лекції</button></h2>
+                    <div id="consult1" class="accordion-collapse collapse" data-bs-parent="#consult">
                         <div class="accordion-body">
 						 Матеріали:	<a href="https://kozaknazar.github.io/ACMVNSPDF.pdf" target="_blank">ВНС</a> 
 							      | <a href="https://docs.google.com/viewer?url=https://kozaknazar.github.io/ACMVNSPDF.pdf" target="_blank">ВНС by GV</a>	
