--- a/acm_basicTopic3.html
+++ b/acm_basicTopic3.html
@@ -190,7 +190,7 @@ mso-ansi-language:UK'>3.2.6 Абстрактні типи даних (АТД)</s
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>3.2.6.1 Поняття Абстрактоного типу даних. Контейнери та
+mso-ansi-language:UK'>3.2.6.1 Поняття абстрактоного типу даних. Контейнери та
 колекції</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
@@ -236,8 +236,8 @@ mso-ansi-language:UK'>3.2.8.1 Геш-таблиця</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>3.2.8.2 Одно- та двобічнозв'язні списки. Список з пропусками.
-Розгорнутий зв'язаний список.</span></p>
+mso-ansi-language:UK'>3.2.8.2 Одно- та двобічно зв'язні списки. Список з
+пропусками. Розгорнутий зв'язаний список.</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -343,19 +343,27 @@ style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>3.3.2.7 Евристичні алгоритми</span></p>
+mso-ansi-language:UK'>3.3.2.7 Евристичні алгоритми</span><span lang=UK
+style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>3.3.2.7.1 Особливості евристичних алгоритмів</span></p>
+mso-ansi-language:UK'>3.3.2.7.1 Особливості евристичних алгоритмів</span><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
 mso-ansi-language:UK'>3.3.2.7.2 Метод спроб і помилок <i>(</i></span><i><span
 lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:EN-US'>trial and error</span></i><i><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>)</span></i><span lang=EN-US style='mso-ansi-language:EN-US'><o:p></o:p></span></p>
+mso-ansi-language:EN-US'>trial</span></i><i><span lang=EN-US style='font-size:
+14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'> </span></i><i><span
+lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
+mso-ansi-language:EN-US'>and</span></i><i><span lang=EN-US style='font-size:
+14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'> </span></i><i><span
+lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
+mso-ansi-language:EN-US'>error</span></i><i><span lang=UK style='font-size:
+14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'>)</span></i><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -381,8 +389,8 @@ mso-ansi-language:UK'>3.3.2.9 Просторово-часовий компром
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>3.3.2.10 Прогнозування складності алгоритму під час застосування
-відповідних стратегії</span></p>
+mso-ansi-language:UK'>3.3.2.10 Прогнозування складності алгоритму під час
+застосування відповідних стратегії</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
