--- a/acm_basicTopic2.html
+++ b/acm_basicTopic2.html
@@ -80,8 +80,9 @@ mso-ansi-language:UK'>2.1.1.4 Аналіз рекурсивних алгорит
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.1.5 Аналіз алгоритму для найкращого, середнього та
-найгіршого випадку</span></p>
+mso-ansi-language:UK'>2.1.1.5 Аналіз алгоритму відповідно до варіантів його
+виконання: для найкращого випадку, для середнього випадку та для найгіршого
+випадку</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -93,17 +94,14 @@ mso-ansi-language:UK'>2.1.1.6.1 Загальні визначення</span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.1.6.2 О-, о-, &#937;-, &#969;-, &#920;- нотації</span></p>
+mso-ansi-language:UK'>2.1.1.6.2 Нотація Бахмана-Ландау <i style='mso-bidi-font-style:
+normal'>(група асимптотичних нотацій)</i>: О-, о-, &#937;-, &#969;-, &#920;-
+нотації</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.1.7 Детермінований</span><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>(DTIME) та недетермінований</span><span lang=UK style='font-size:14.0pt;
-font-family:"Times New Roman",serif'> </span><span lang=UK style='font-size:
-14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'>(NTIME)
-ресурси часу виконання </span></p>
+mso-ansi-language:UK'>2.1.1.7 Детермінований (DTIME) та недетермінований
+(NTIME) ресурси часу виконання </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -111,25 +109,16 @@ mso-ansi-language:UK'>2.1.1.8 Здійсненні класи складност
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.1.8.1 DLONGTIME-клас складності</span><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span><i><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>(логарифмічний)</span></i><span lang=UK style='font-size:14.0pt;font-family:
-"Times New Roman",serif;mso-ansi-language:UK'> </span></p>
+mso-ansi-language:UK'>2.1.1.8.1 DLONGTIME-клас складності <i>(логарифмічний)</i>
+</span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.1.8.2 PolylogTIME-клас складності</span><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span><i><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>(полілогарифмічний)</span></i></p>
+mso-ansi-language:UK'>2.1.1.8.2 PolylogTIME-клас складності <i>(полілогарифмічний)</i></span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.1.8.3 P-клас складності</span><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>(поліноміальний)</span></p>
+mso-ansi-language:UK'>2.1.1.8.3 P-клас складності (поліноміальний)</span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -183,23 +172,15 @@ mso-ansi-language:UK'>2.1.1.9.6 UP-клас складності</span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.1.9.7 #P-клас</span><span lang=UK style='font-size:
-14.0pt;font-family:"Times New Roman",serif'> </span><i><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>(вимовляється як «шарп П»)</span></i><span lang=UK style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:UK'> складності та
-#P-повні задачі</span></p>
+mso-ansi-language:UK'>2.1.1.9.7 #P-клас <i>(вимовляється як «шарп П»)</i>
+складності та #P-повні задачі</span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
 mso-ansi-language:UK'>2.1.1.9.8 </span><span lang=UK style='font-size:14.0pt;
 font-family:"Cambria Math",serif;mso-ansi-language:UK'>&#8853;</span><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>P-клас</span><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>
-</span><i><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>(вимовляється як «паритет П»)</span></i><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'> складності</span></p>
+UK'>P-клас <i>(вимовляється як «паритет П»)</i> складності</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -263,13 +244,8 @@ mso-ansi-language:UK'>2.1.1.11.3 NC-клас складності</span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.2 Ємнісна</span><span lang=UK style='font-size:14.0pt;
-font-family:"Times New Roman",serif'> </span><span lang=UK style='font-size:
-14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'>(просторова)
-складність алгоритму</span><span lang=UK style='font-size:14.0pt;font-family:
-"Times New Roman",serif'> </span><i><span lang=UK style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:UK'>(складність по об’єму
-пам’яті)</span></i></p>
+mso-ansi-language:UK'>2.1.2 Ємнісна (просторова) складність алгоритму <i>(складність
+по об’єму пам’яті)</i></span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -277,8 +253,8 @@ mso-ansi-language:UK'>2.1.2.1 Визначення просторової скл
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.2.2 Детермінований(DSPACE) та недетермінований(NSPACE)
-просторові(ємнісні) ресурси</span></p>
+mso-ansi-language:UK'>2.1.2.2 Детермінований(DSPACE) та
+недетермінований(NSPACE) просторові(ємнісні) ресурси</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -294,10 +270,7 @@ mso-ansi-language:UK'>2.1.2.4.1 L-клас складності</span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.2.4.2 PolyL-клас складності</span><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span><i><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>(полілогарифмічний)</span></i></p>
+mso-ansi-language:UK'>2.1.2.4.2 PolyL-клас складності <i>(полілогарифмічний)</i></span></p>
 
 <p class=MsoNormal style='margin-left:106.2pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
