--- a/acm.html
+++ b/acm.html
@@ -469,7 +469,7 @@
 								
 								<div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic5">Частина 1. Тема 5. Бібліотеки основних алгоритмів обробки інформації для популярних мов програмування</button>
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic5">Частина 1. Тема 5. Бібліотеки базових алгоритмів обробки інформації для популярних мов програмування</button>
                                     </h2>
                                     <div id="basicTopic5" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
