--- a/acm.html
+++ b/acm.html
@@ -599,7 +599,7 @@
 		
 		<br/>
 		
-		<i>*зразки коду створенні одним файлом(що іноді суперечить стилям відповідних парадигм програмуання, таких як ООП) для максимальної простоти використання студентами, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування; також більшість написаних таким чином програм(в одному файлі) можна компілювати і запускати на виконання за допомогою ріізних online-середовищ</i>			
+		<i>*зразки коду створенні одним файлом (що іноді суперечить стилям відповідних парадигм програмуання, таких як ООП) для максимальної простоти використання студентами, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування; також більшість написаних таким чином програм (в одному файлі) можна компілювати і запускати на виконання за допомогою різних online-середовищ</i>			
 		
 		
     </div>
