--- a/acm_annotationAndRecommendedReading.html
+++ b/acm_annotationAndRecommendedReading.html
@@ -54,76 +54,90 @@
 <div class=WordSection1>
 
 <p class=MsoNormal style='text-indent:1.0cm;line-height:normal'><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif'>Курс «Алгоритми та
-моделі обчислень» розроблений на основі класичних літературних джерел [1, 2, 3,
-4, 5, 6] зважаючи на програми аналогічних курсів Массачусетського
-технологічного інституту [7, 8]. Основу дисципліни становлять наступні розділи.</span></p>
+style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>Курс «Алгоритми та моделі обчислень» розроблений на основі класичних
+літературних джерел [1, 2, 3, 4, 5, 6] зважаючи на програми аналогічних курсів
+Массачусетського технологічного інституту [7, 8]. Основу дисципліни становлять
+наступні розділи.</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   Теорія
-алгоритмів <i>(в зарубіжній літературі – теорія обчислень, англ. Theory of
-Computation)</i> [3]. Тут розглядаються:</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; Теорія алгоритмів <i>(в зарубіжній літературі – теорія
+обчислень, англ. Theory of Computation)</i> [3]. Тут розглядаються:</span><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:2.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•     теорія
-автоматів <i>(англ. Automata theory)</i>;</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp;&nbsp;&nbsp; теорія автоматів <i>(англ. Automata theory)</i>;</span><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:2.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•     теорія
-формальних мов <i>(англ. Formal language theory)</i>;</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp;&nbsp;&nbsp; теорія формальних мов <i>(англ. Formal language
+theory)</i>;</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:2.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•     теорія
-обчислюваності <i>(англ. Computability theory)</i>;</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp;&nbsp;&nbsp; теорія обчислюваності <i>(англ. Computability
+theory)</i>;</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:2.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•     теорія
-складності обчислень <i>(англ. Computational complexity theory)</i>.</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp;&nbsp;&nbsp; теорія складності обчислень <i>(англ.
+Computational complexity theory)</i>.</span><span lang=EN-US style='mso-ansi-language:
+EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   Моделі 
-обчислень <i>(англ. Models of Computation)</i> [4, 5].</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; Моделі&nbsp; обчислень <i>(англ. Models of Computation)</i>
+[4, 5].</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   Методи
-розробки алгоритмів(алгоритмічні стратегії)<i>(англ. Algorithm Design Paradigm,
-Algorithmic Paradigm, Algorithmic Technique,  Algorithmic Strategy)</i> [6].</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; Методи розробки алгоритмів (алгоритмічні стратегії) <i>(англ.
+Algorithm Design Paradigm, Algorithmic Paradigm, Algorithmic Technique,&nbsp;
+Algorithmic Strategy)</i> [6].</span><span lang=EN-US style='mso-ansi-language:
+EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='text-indent:1.0cm;line-height:normal'><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif'>Для базових
-алгоритмів обробки інформації та бібліотек популярних мов програмування, які їх
-реалізовують, розглядаються зразки коду програм, в яких велику увагу приділено
-використанню:</span></p>
+style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>Для базових алгоритмів обробки інформації та бібліотек популярних мов
+програмування, які їх реалізовують, розглядаються зразки коду програм, в яких
+велику увагу приділено використанню:</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   узагальненого
-програмування;</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; узагальненого програмування;</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   метапрограмування;</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; метапрограмування;</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   регулярних
-виразів та нотації Бекуса-Наура.</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; регулярних виразів та нотації Бекуса-Наура.</span></p>
 
 <p class=MsoNormal style='text-indent:1.0cm;line-height:normal'><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif'>Також окрім
-імперативного(в основному процедурного та об’єктно-орієнтованого)
-програмування, в наведених зразках коду показано застосування:</span></p>
+style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>Також окрім імперативного</span><span lang=UK style='font-size:14.0pt;
+font-family:"Times New Roman",serif'> </span><span lang=UK style='font-size:
+14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'>(процедурного
+та об’єктно-орієнтованого) програмування, в наведених зразках коду показано
+застосування:</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   парадигми
-функційного програмування;</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; парадигми функційного програмування;</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   парадигми
-реактивного програмування;</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; парадигми реактивного програмування;</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>•   парадигми
-подійно-орієнтованого програмування.</span></p>
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'>•&nbsp;&nbsp; парадигми подійно-орієнтованого програмування.</span></p>
 
-<p class=MsoNormal><span lang=UK>&nbsp;</span></p>
+<p class=MsoNormal><span lang=UK style='mso-ansi-language:UK'>&nbsp;</span></p>
 
 </div>
 
