--- a/acm_annotationAndRecommendedReading.html
+++ b/acm_annotationAndRecommendedReading.html
@@ -89,15 +89,14 @@ EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>•&nbsp;&nbsp; Моделі&nbsp; обчислень <i>(англ. Models of Computation)</i>
+UK'>•&nbsp;&nbsp; Моделі&nbsp;обчислень <i>(англ. Models of Computation)</i>
 [4, 5].</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
 UK'>•&nbsp;&nbsp; Методи розробки алгоритмів (алгоритмічні стратегії) <i>(англ.
-Algorithm Design Paradigm, Algorithmic Paradigm, Algorithmic Technique,&nbsp;
-Algorithmic Strategy)</i> [6].</span><span lang=EN-US style='mso-ansi-language:
-EN-US'><o:p></o:p></span></p>
+Algorithm Design Paradigm, Algorithmic Paradigm, Algorithmic Technique,&nbsp;Algorithmic
+Strategy)</i> [6].</span><span lang=EN-US style='mso-ansi-language:EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='text-indent:1.0cm;line-height:normal'><span lang=UK
 style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
@@ -119,11 +118,8 @@ UK'>•&nbsp;&nbsp; регулярних виразів та нотації Бе
 
 <p class=MsoNormal style='text-indent:1.0cm;line-height:normal'><span lang=UK
 style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>Також окрім імперативного</span><span lang=UK style='font-size:14.0pt;
-font-family:"Times New Roman",serif'> </span><span lang=UK style='font-size:
-14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'>(процедурного
-та об’єктно-орієнтованого) програмування, в наведених зразках коду показано
-застосування:</span></p>
+UK'>Також окрім імперативного (процедурного та об’єктно-орієнтованого)
+програмування, в наведених зразках коду показано застосування:</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
