--- a/acm_annotationAndRecommendedReading.html
+++ b/acm_annotationAndRecommendedReading.html
@@ -146,9 +146,11 @@ UK'>•&nbsp;&nbsp; парадигми подійно-орієнтованого
 <br>			
 <div class=WordSection1>
 
-<p class=MsoNormal align=center style='text-align:center;line-height:normal'><b><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;letter-spacing:
--.3pt;mso-ansi-language:UK'>Базова</span></b></p>
+<p class=MsoNormal align=center style='text-align:center;line-height:normal'><i
+style='mso-bidi-font-style:normal'><span lang=UK style='font-size:14.0pt;
+font-family:"Times New Roman",serif;letter-spacing:-.3pt;mso-ansi-language:
+UK;mso-bidi-font-weight:bold'>Базова</span></i><i style='mso-bidi-font-style:
+normal'><span lang=EN-US style='mso-ansi-language:EN-US'><o:p></o:p></span></i></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -159,9 +161,9 @@ EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2. Donald E. Knuth.The Art of Computer Programming,
-Volumes 1-4A Boxed Set. Third Edition (Reading, Massachusetts: Addison-Wesley,
-2011), 3168pp. ISBN 978-0-321-75104-1, 0-321-75104-3.</span><span lang=EN-US
+mso-ansi-language:UK'>2. Donald E. Knuth.The Art of Computer Programming, Volumes
+1-4A Boxed Set. Third Edition (Reading, Massachusetts: Addison-Wesley, 2011),
+3168pp. ISBN 978-0-321-75104-1, 0-321-75104-3.</span><span lang=EN-US
 style='mso-ansi-language:EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
@@ -219,20 +221,23 @@ lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;letter-spaci
 -.3pt;mso-ansi-language:UK'>&nbsp;</span></b><span lang=EN-US style='mso-ansi-language:
 EN-US'><o:p></o:p></span></p>
 
-<p class=MsoNormal align=center style='text-align:center;line-height:normal'><b><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;letter-spacing:
--.3pt;mso-ansi-language:UK'>Допоміжна</span></b></p>
+<p class=MsoNormal align=center style='text-align:center;line-height:normal'><i
+style='mso-bidi-font-style:normal'><span lang=UK style='font-size:14.0pt;
+font-family:"Times New Roman",serif;letter-spacing:-.3pt;mso-ansi-language:
+UK;mso-bidi-font-weight:bold'>Допоміжна</span></i><i style='mso-bidi-font-style:
+normal'><span lang=EN-US style='mso-ansi-language:EN-US'><o:p></o:p></span></i></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
-normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>1</span><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>1. Темнікова, О. Л. Математична логіка та теорія алгоритмів: Конспект
-лекцій [Електронний ресурс] : навч. посіб. для студ. спеціальності 113
-«Прикладна математика», освітньої програми «Наука про дані та математичне
-моделювання» / О. Л. Темнікова ; КПІ ім. Ігоря Сікорського. – Електронні
-текстові дані (1 файл: 3,69 Мбайт). – Київ : КПІ ім. </span><span
-style='font-size:14.0pt;font-family:"Times New Roman",serif'>Ігоря Сікорського,
-2021. – 177 с. – Назва з екрана. – Режим доступу до ресурсу: <a
+normal'><span lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
+mso-ansi-language:EN-US'>1</span><span lang=UK style='font-size:14.0pt;
+font-family:"Times New Roman",serif;mso-ansi-language:UK'>1. Темнікова, О. Л.
+Математична логіка та теорія алгоритмів: Конспект лекцій [Електронний ресурс<span
+class=GramE>] :</span> навч. посіб. для студ. спеціальності 113 «Прикладна
+математика», освітньої програми «Наука про дані та математичне моделювання» /
+О. Л. Темнікова ; КПІ ім. Ігоря Сікорського. – Електронні текстові дані (1
+файл: 3,69 Мбайт). – Київ : КПІ ім. </span><span style='font-size:14.0pt;
+font-family:"Times New Roman",serif'>Ігоря Сікорського, 2021. – 177 с. – Назва
+з екрана. – Режим доступу до ресурсу: <a
 href="https://ela.kpi.ua/bitstreams/90cfd1e3-1a98-4370-95f3-bd1d677d0e7c/download">https://ela.kpi.ua/bitstreams/90cfd1e3-1a98-4370-95f3-bd1d677d0e7c/download</a>
 <o:p></o:p></span></p>
 
@@ -258,10 +263,10 @@ href="http://elar.tsatu.edu.ua/bitstream/123456789/9754/1/ta_priyma_20181.pdf">h
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>14.
 Стусь, О. В. Математична логіка та теорія алгоритмів: Лекції [Електронний
-ресурс] : навчальний посібник для студентів спеціальності 124 «Системний
-аналіз» / О. В. Стусь ; КПІ ім. Ігоря Сікорського. – Електронні текстові дані
-(1 файл: 0,8 Мбайт). – Київ : КПІ ім. Ігоря Сікорського, 2017. – 150 с. – Назва
-з екрана. – Режим доступу до ресурсу: <a
+ресурс] : навчальний посібник для студентів спеціальності 124 «Системний аналіз»
+/ О. В. Стусь ; КПІ ім. Ігоря Сікорського. – Електронні текстові дані (1 файл:
+0,8 Мбайт). – Київ : КПІ ім. Ігоря Сікорського, 2017. – 150 с. – Назва з
+екрана. – Режим доступу до ресурсу: <a
 href="https://ela.kpi.ua/bitstreams/045945ba-0296-4da9-90b2-638d4ed02a68/download">https://ela.kpi.ua/bitstreams/045945ba-0296-4da9-90b2-638d4ed02a68/download</a>
 <o:p></o:p></span></p>
 
@@ -320,23 +325,21 @@ href="https://repository.kpi.kharkov.ua/server/api/core/bitstreams/5847efdd-6ff5
 normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>22.
 Стативка, Ю. І. Формальні мови. Основнi концепти i представлення [Електронний
 ресурс] : навч. посіб. для студ. спецiальностi 121 Iнженерiя програмного
-забезпечення / Ю. І. Стативка ; КПІ ім. Ігоря Сікорського. – Електронні
-текстові дані (1 файл: 956,79 Кбайт). – Київ : КПІ ім. Ігоря Сікорського, 2023.
-– 87 с. – Назва з екрана. – Режим доступу до ресурсу: <a
+забезпечення / Ю. І. Стативка ; КПІ ім. Ігоря Сікорського. – Електронні текстові
+дані (1 файл: 956,79 Кбайт). – Київ : КПІ ім. Ігоря Сікорського, 2023. – 87 с.
+– Назва з екрана. – Режим доступу до ресурсу: <a
 href="https://ela.kpi.ua/server/api/core/bitstreams/0278c558-aeac-4b4c-96c5-6d8eeb532c7f/content">https://ela.kpi.ua/server/api/core/bitstreams/0278c558-aeac-4b4c-96c5-6d8eeb532c7f/content</a>
 <o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
-normal'><span lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:EN-US'>2</span><span style='font-size:14.0pt;font-family:
-"Times New Roman",serif'>3. Новотарський, М. А. Алгоритми та методи обчислень
-[Електронний ресурс] : навч. посіб. для студентів спеціальностей 121 «Інженерія
-програмного забезпечення», спеціалізації «Програмне забезпечення
-високопродуктивних комп’ютерних систем та мереж» та 123 «Комп’ютерна
-інженерія», спеціалізації «Комп’ютерні системи та мережі» / М. А. Новотарський
-; КПІ ім. Ігоря Сікорського. – Електронні текстові дані (1 файл: 4,64 Мбайт). –
-Київ : КПІ ім. Ігоря Сікорського, 2019. – 407 с. – Назва з екрана. – Режим
-доступу до ресурсу: <a
+normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>23. Новотарський,
+М. А. Алгоритми та методи обчислень [Електронний ресурс] : навч. посіб. для
+студентів спеціальностей 121 «Інженерія програмного забезпечення»,
+спеціалізації «Програмне забезпечення високопродуктивних комп’ютерних систем та
+мереж» та 123 «Комп’ютерна інженерія», спеціалізації «Комп’ютерні системи та
+мережі» / М. А. Новотарський ; КПІ ім. Ігоря Сікорського. – Електронні текстові
+дані (1 файл: 4,64 Мбайт). – Київ : КПІ ім. Ігоря Сікорського, 2019. – 407 с. –
+Назва з екрана. – Режим доступу до ресурсу: <a
 href="https://ela.kpi.ua/bitstreams/7421218e-d7dd-4e75-aa3e-bd7979db4e6d/download">https://ela.kpi.ua/bitstreams/7421218e-d7dd-4e75-aa3e-bd7979db4e6d/download</a>
 <o:p></o:p></span></p>
 
