--- a/acm.html
+++ b/acm.html
@@ -171,7 +171,7 @@
                         <div class="accordion-body">
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/practs/info/acmInfoForPract1.pdf">Відомості(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/info/acmInfoForPract1.pdf">Відомості(скачати)</a></b>
-							                     | <b>Практичне заняття №1 є вступним, тому жодних завдання не видається</b>
+							                     | <b>Практичне заняття №1 є вступним, тому на цьому занятті завдання не виконуються</b>
                         </div>
                     </div>
                 </div>
